--- a/test/html_tests/para_start_test.html
+++ b/test/html_tests/para_start_test.html
@@ -21,21 +21,21 @@
 </head>
 <body>
 <div id="para-src">
-    <section data-pr-object>
-        <h1>First Header</h1>
+    <section>
+        <h1 data-pr-object>First Header</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+        <p data-pr-object>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
     </section>
-    <section data-pr-object>
-        <h1>Second Header</h1>
+    <section>
+        <h1 data-pr-object>Second Header</h1>
 
-        <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
+        <p data-pr-object>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
             quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
     </section>
-    <section data-pr-object>
-        <h1>Third Header</h1>
+    <section>
+        <h1 data-pr-object>Third Header</h1>
 
-        <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
+        <p data-pr-object>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
             justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p>
     </section>
 </div>
