--- a/test/html_tests/para_start_test.html
+++ b/test/html_tests/para_start_test.html
@@ -11,7 +11,7 @@
 
         #para-src section {
             float: left;
-            width:400px;
+            width: 400px;
         }
     </style>
     <script src="../../src/javascripts/para.js/para.util.js"></script>
@@ -22,20 +22,29 @@
 <body>
 <div id="para-src">
     <section>
-        <h1 data-pr-object>First Header</h1>
+        <h1 data-pr-object
+            data-pr-speed="0.5"
+                >First Header</h1>
 
-        <p data-pr-object>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+        <p data-pr-object>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            dolor.</p>
     </section>
     <section>
-        <h1 data-pr-object>Second Header</h1>
+        <h1 data-pr-object
+            data-pr-speed="0.5"
+                >Second Header</h1>
 
-        <p data-pr-object>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
+        <p data-pr-object>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+            mus. Donec
             quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
     </section>
     <section>
-        <h1 data-pr-object>Third Header</h1>
+        <h1 data-pr-object
+            data-pr-speed="0.5"
+                >Third Header</h1>
 
-        <p data-pr-object>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
+        <p data-pr-object>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
+            arcu. In enim
             justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p>
     </section>
 </div>
