--- a/test/html_tests/para_start_test.html
+++ b/test/html_tests/para_start_test.html
@@ -14,10 +14,10 @@
             width: 400px;
         }
     </style>
-    <script src="../../src/javascripts/para.js/para.util.js"></script>
-    <script src="../../src/javascripts/para.js/para.object.js"></script>
-    <script src="../../src/javascripts/para.js/para.screen.js"></script>
-    <script src="../../src/javascripts/para.js/para.start.js"></script>
+    <script src="../../src/javascripts/para.js/00.para.util.js"></script>
+    <script src="../../src/javascripts/para.js/01.para.object.js"></script>
+    <script src="../../src/javascripts/para.js/02.para.screen.js"></script>
+    <script src="../../src/javascripts/para.js/99.para.start.js"></script>
 </head>
 <body>
 <div id="para-src">
