--- a/test/html_tests/para_util_test.html
+++ b/test/html_tests/para_util_test.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <script src="../../src/javascripts/para.js/para.util.js"></script>
+    <script src="../../src/javascripts/para.js/00.para.util.js"></script>
     <title>para util test</title>
     <style>
         body {
