--- a/demo/mobile_tutorial/index.html
+++ b/demo/mobile_tutorial/index.html
@@ -21,6 +21,13 @@
             overflow: hidden;
         }
 
+        .full-width {
+            width: 100%;
+        }
+
+        #wide-iframe{
+            height:500px;
+        }
     </style>
 </head>
 <body>
@@ -30,5 +37,10 @@
     </iframe>
 </div>
 
+<div>
+    <iframe src="./content.html" frameborder="0" class="full-width" id="wide-iframe">
+
+    </iframe>
+</div>
 </body>
 </html>
