--- a/test/html_tests/para_start_test.html
+++ b/test/html_tests/para_start_test.html
@@ -69,10 +69,14 @@
             justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p>
     </section>
     <br style="clear:both;"/>
-    <p>
-        Sometimes you'll want to see what styles the default document view has. For instance, you gave a paragraph an width of 50%, but how do you see how many pixels that is in your users' browser?
 
-        In addition, sometimes you want to read out the styles applied to an element by embedded or linked style sheets. The style property only reflects the inline styles of an element, so if you want to read out other styles you have to resort to other means.
+    <p>
+        Sometimes you'll want to see what styles the default document view has. For instance, you gave a paragraph an
+        width of 50%, but how do you see how many pixels that is in your users' browser?
+
+        In addition, sometimes you want to read out the styles applied to an element by embedded or linked style sheets.
+        The style property only reflects the inline styles of an element, so if you want to read out other styles you
+        have to resort to other means.
     </p>
 </div>
 <script>
