--- a/test/html_tests/para_start_test.html
+++ b/test/html_tests/para_start_test.html
@@ -44,7 +44,14 @@
     <section data-pr-object
              data-pr-speed="0.5">
         <h1>First Header</h1>
+        <div style="background: #008000">
+            abc
+            <div style="background-image: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR7Lra7apACFS6wG7gA_C2R-ut6ykBEvG1WnoNUrQNH6wVV7RCd0h4Af9Ks');
+            background-size: 20px 20px;
+            "
 
+                    >ddd</div>
+        </div>
 
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
             dolor.</p>
