--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -22,91 +22,34 @@
 
     <section class="pr-page">
         <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h1 id="parari" data-pr-object="true" data-pr-speed="0.5">parari</h1>
+        <h1 id="parari" data-pr-object="true" data-pr-speed="0.5">parari<span>o</span>jj</h1>
 
-        <p data-pr-object="true" data-pr-speed="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img
-                src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>
-            <a href="http://codeclimate.com/github/okunishinishi/parari"><img
-                    src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"
-                    alt="Code Climate"></a>
-            <a href="http://codeclimate.com/github/okunishinishi/parari"><img
-                    src="http://img.shields.io/codeclimate/coverage/github/okunishinishi/parari.svg?style=flat"
-                    alt="Code Coverage"></a>
-            <a href="http://gemnasium.com/okunishinishi/parari"><img
-                    src="http://img.shields.io/gemnasium/okunishinishi/parari.svg?style=flat" alt="dependencies"></a>
-            <a href="http://www.npmjs.org/package/parari"><img src="http://img.shields.io/npm/v/parari.svg?style=flat"
-                                                               alt="npm version"></a>
-            <a href="http://www.gittip.com/okunishinishi/"><img
-                    src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>
+        <!--<p data-pr-object="true" data-pr-speed="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img-->
+                <!--src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>-->
+            <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
+                    <!--src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"-->
+                    <!--alt="Code Climate"></a>-->
+            <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
+                    <!--src="http://img.shields.io/codeclimate/coverage/github/okunishinishi/parari.svg?style=flat"-->
+                    <!--alt="Code Coverage"></a>-->
+            <!--<a href="http://gemnasium.com/okunishinishi/parari"><img-->
+                    <!--src="http://img.shields.io/gemnasium/okunishinishi/parari.svg?style=flat" alt="dependencies"></a>-->
+            <!--<a href="http://www.npmjs.org/package/parari"><img src="http://img.shields.io/npm/v/parari.svg?style=flat"-->
+                                                               <!--alt="npm version"></a>-->
+            <!--<a href="http://www.gittip.com/okunishinishi/"><img-->
+                    <!--src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>-->
 
-        <p data-pr-object="true" data-pr-speed="0.8">Generate parallax page from html.</p>
+        <!--<p data-pr-object="true" data-pr-speed="0.8">Generate parallax page from html.</p>-->
 
-        <p data-pr-object="true" data-pr-speed="0.8"><a href="https://github.com/tick-tack/apeman"><img
-                style="height:40px;"
-                src="https://raw.githubusercontent.com/tick-tack/apeman/master/doc/images/apeman.png" height="40"></a> 
-            <a href="http://nodejs.org/"><img style="height:40px;" src="http://nodejs.org/images/logos/nodejs-dark.png"
-                                              height="40"></a> </p></section>
-    <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h2 id="table-of-contents" data-pr-object="true" data-pr-speed="0.5">Table of Contents</h2>
-        <ul data-pr-object="true" data-pr-speed="0.8">
-            <li><a href="#01-whats-this">What's this?</a></li>
-            <li><a href="#02-why-this">Why this?</a></li>
-            <li><a href="#03-demo">Demo</a></li>
-            <li><a href="#04-requirements">Requirements</a></li>
-            <li><a href="#05-install">Installation</a></li>
-            <li><a href="#06-documents">Documents</a></li>
-            <li><a href="#10-donation">Donation</a></li>
-            <li><a href="#11-license">License</a></li>
-        </ul>
-        <p data-pr-object="true" data-pr-speed="0.8"><a name="01-whats-this"></a></p></section>
-    <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h2 id="what-s-this-" data-pr-object="true" data-pr-speed="0.5">What's this?</h2>
-
-        <p data-pr-object="true" data-pr-speed="0.8">A slideshow generator.</p>
-
-        <p data-pr-object="true" data-pr-speed="0.8">Convert markdown files into html with <a
-                href="http://en.wikipedia.org/wiki/Parallax">parallax effect</a> scrolling. </p>
-
-        <p data-pr-object="true" data-pr-speed="0.8"><a name="02-why-this"></a></p></section>
-    <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h2 id="why-this-" data-pr-object="true" data-pr-speed="0.5">Why this?</h2>
-
-        <p data-pr-object="true" data-pr-speed="0.8">It's fast.</p>
-
-        <p data-pr-object="true" data-pr-speed="0.8">parari based on HTML canvas and provides really smooth
-            scrolling.</p>
-
-        <p data-pr-object="true" data-pr-speed="0.8"><a name="03-demo"></a></p></section>
-    <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h2 id="demo" data-pr-object="true" data-pr-speed="0.5">Demo</h2>
-        <ul data-pr-object="true" data-pr-speed="0.8">
-            <li><a href="http://okunishinishi.github.io/parari/demo/parari-readme/parari-cosmic.html">parari-cosmic</a>
-            </li>
-            <li><a href="http://okunishinishi.github.io/parari/demo/parari-readme/parari-fancy.html">parari-fancy</a>
-            </li>
-        </ul>
-        <p data-pr-object="true" data-pr-speed="0.8"><a name="04-requirements"></a></p></section>
-    <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h2 id="requirements" data-pr-object="true" data-pr-speed="0.5">Requirements</h2>
-        <ul data-pr-object="true" data-pr-speed="0.8">
-            <li><a href="http://nodejs.org/">node.js</a></li>
-        </ul>
-        <p data-pr-object="true" data-pr-speed="0.8"><a name="05-install"></a></p></section>
-    <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h2 id="installation" data-pr-object="true" data-pr-speed="0.5">Installation</h2><pre data-pr-object="true"
-                                                                                              data-pr-speed="0.8"><code
-            class="lang-bash">$ sudo npm install parari -g
-    </code></pre>
-        <p data-pr-object="true" data-pr-speed="0.8"><a name="06-documents"></a></p></section>
+        <!--<p data-pr-object="true" data-pr-speed="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
+                <!--style="height:40px;"-->
+                <!--src="https://raw.githubusercontent.com/tick-tack/apeman/master/doc/images/apeman.png" height="40"></a> -->
+            <!--<a href="http://nodejs.org/"><img style="height:40px;" src="http://nodejs.org/images/logos/nodejs-dark.png"-->
+                                              <!--height="40"></a> </p>-->
 
 
-</div>
+    </section>
+
 
 <script>
     parari.start('parari-demo-root', {
