--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -11,8 +11,9 @@
     <script src="../../assets/src/parari.js/02.prefixed.js"></script>
     <script src="../../assets/src/parari.js/03.rect.js"></script>
     <script src="../../assets/src/parari.js/10.drawable.js"></script>
-    <script src="../../assets/src/parari.js/11.src.js"></script>
-    <script src="../../assets/src/parari.js/12.screen.js"></script>
+    <script src="../../assets/src/parari.js/11.fragment.js"></script>
+    <script src="../../assets/src/parari.js/12.src.js"></script>
+    <script src="../../assets/src/parari.js/13.screen.js"></script>
     <script src="../../assets/src/parari.js/20.layers.js"></script>
     <script src="../../assets/src/parari.js/99.start.js"></script>
 
