--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -22,10 +22,10 @@
 <div id="parari-demo-root">
 
     <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-object="true"></div>
-        <h1 id="parari" data-pr-object="true" data-pr-speed="0.5">parari<span>o</span>jj</h1>
+        <div class="pr-page-background" data-pr-z="-100" data-pr-fragment="true"></div>
+        <h1 id="parari" data-pr-fragment="true" data-pr-speed="0.5">parari<span>o</span>jj</h1>
 
-        <!--<p data-pr-object="true" data-pr-speed="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img-->
+        <!--<p data-pr-fragment="true" data-pr-speed="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img-->
                 <!--src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>-->
             <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
                     <!--src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"-->
@@ -40,9 +40,9 @@
             <!--<a href="http://www.gittip.com/okunishinishi/"><img-->
                     <!--src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>-->
 
-        <!--<p data-pr-object="true" data-pr-speed="0.8">Generate parallax page from html.</p>-->
+        <!--<p data-pr-fragment="true" data-pr-speed="0.8">Generate parallax page from html.</p>-->
 
-        <!--<p data-pr-object="true" data-pr-speed="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
+        <!--<p data-pr-fragment="true" data-pr-speed="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
                 <!--style="height:40px;"-->
                 <!--src="https://raw.githubusercontent.com/tick-tack/apeman/master/doc/images/apeman.png" height="40"></a> -->
             <!--<a href="http://nodejs.org/"><img style="height:40px;" src="http://nodejs.org/images/logos/nodejs-dark.png"-->
