--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -10,6 +10,7 @@
     <script src="../../assets/src/parari.js/01.constants.js"></script>
     <script src="../../assets/src/parari.js/02.prefixed.js"></script>
     <script src="../../assets/src/parari.js/03.rect.js"></script>
+    <script src="../../assets/src/parari.js/04.body_scroller.js"></script>
     <script src="../../assets/src/parari.js/10.drawable.js"></script>
     <script src="../../assets/src/parari.js/11.fragment.js"></script>
     <script src="../../assets/src/parari.js/12.src.js"></script>
