--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -23,8 +23,10 @@
 <div id="parari-demo-root">
 
     <section class="pr-page">
-        <div class="pr-page-background" data-pr-z="-100" data-pr-fragment="true"></div>
-        <h1 id="parari" data-pr-fragment="true" data-pr-speed="0.5">parari<span>o</span>jj</h1>
+        <!--<div class="pr-page-background" data-pr-z="-100" data-pr-fragment="true"></div>-->
+        <h1 id="parari" data-pr-fragment="true"
+            style="background-color:#38A;"
+            data-pr-speed="0.5">parari<span>o</span>jj</h1>
 
         <!--<p data-pr-fragment="true" data-pr-speed="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img-->
                 <!--src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>-->
