--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -23,8 +23,8 @@
 <div id="parari-demo-root">
 
     <section class="pr-page">
-        <div class="pr-page-background"
-             data-pr-z="-100" data-pr-fragment="true"></div>
+        <!--<div class="pr-page-background"-->
+             <!--data-pr-z="-100" data-pr-fragment="true"></div>-->
         <!--<h1 id="parari" data-pr-fragment="true"-->
             <!--style="background-color:#38A;"-->
             <!--data-pr-velocity="0.5">parari</h1>-->
