--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -9,8 +9,9 @@
     <script src="../../assets/src/parari.js/00.utilities.js"></script>
     <script src="../../assets/src/parari.js/01.constants.js"></script>
     <script src="../../assets/src/parari.js/02.prefixed.js"></script>
-    <script src="../../assets/src/parari.js/03.rect.js"></script>
-    <script src="../../assets/src/parari.js/04.body_scroller.js"></script>
+    <script src="../../assets/src/parari.js/03.unprefixed.js"></script>
+    <script src="../../assets/src/parari.js/04.rect.js"></script>
+    <script src="../../assets/src/parari.js/05.body_scroller.js"></script>
     <script src="../../assets/src/parari.js/10.drawable.js"></script>
     <script src="../../assets/src/parari.js/11.fragment.js"></script>
     <script src="../../assets/src/parari.js/12.src.js"></script>
