--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -47,7 +47,10 @@
 
         <p data-pr-fragment="true"
            style="background-color: #38A;"
-           data-pr-velocity="0.8"><span>Ge<span style="color:#3AA;">n</span>erate</span></p>
+           data-pr-velocity="0.8">
+            <span>
+                <span>Ge</span><span style="color:#3AA;">n</span><span>erate</span></span>
+        </p>
 
         <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
                 <!--style="height:40px;"-->
