--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -48,8 +48,7 @@
         <p data-pr-fragment="true"
            style="background-color: #38A;"
            data-pr-velocity="0.8">
-            <span>
-                <span>Ge</span><span style="color:#3AA;">n</span><span>erate</span></span>
+                Ge<span style="color:#3AA;">n</span><span>erate</span>
         </p>
 
         <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
