add not supported message

--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -12,6 +12,8 @@
     <script src="../../assets/src/parari.js/03.unprefixed.js"></script>
     <script src="../../assets/src/parari.js/04.rect.js"></script>
     <script src="../../assets/src/parari.js/05.body_scroller.js"></script>
+    <script src="../../assets/src/parari.js/06.is_supported.js"></script>
+    <script src="../../assets/src/parari.js/07.present_not_supported.js"></script>
     <script src="../../assets/src/parari.js/10.drawable.js"></script>
     <script src="../../assets/src/parari.js/11.fragment.js"></script>
     <script src="../../assets/src/parari.js/12.src.js"></script>
