--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -26,31 +26,31 @@
 <div id="parari-demo-root">
 
     <section class="pr-page">
-        <div class="pr-page-background"
-             data-pr-z="-100" data-pr-fragment="true"></div>
-        <h1 id="parari" data-pr-fragment="true"
-            style="background-color:#38A;"
-            data-pr-velocity="0.5">par<a>aaa</a>ari</h1>
+        <!--<div class="pr-page-background"-->
+             <!--data-pr-z="-100" data-pr-fragment="true"></div>-->
+        <!--<h1 id="parari" data-pr-fragment="true"-->
+            <!--style="background-color:#38A;"-->
+            <!--data-pr-velocity="0.5">par<a>aaa</a>ari</h1>-->
 
-        <p data-pr-fragment="true" data-pr-velocity="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img
-                src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>
-            <a href="http://codeclimate.com/github/okunishinishi/parari"><img
-                    src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"
-                    alt="Code Climate"></a>
-            <a href="http://codeclimate.com/github/okunishinishi/parari"><img
-                    src="http://img.shields.io/codeclimate/coverage/github/okunishinishi/parari.svg?style=flat"
-                    alt="Code Coverage"></a>
-            <a href="http://gemnasium.com/okunishinishi/parari"><img
-                    src="http://img.shields.io/gemnasium/okunishinishi/parari.svg?style=flat" alt="dependencies"></a>
-            <a href="http://www.npmjs.org/package/parari"><img src="http://img.shields.io/npm/v/parari.svg?style=flat"
-                                                               alt="npm version"></a>
-            <a href="http://www.gittip.com/okunishinishi/"><img
-                    src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>
+        <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img-->
+                <!--src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>-->
+            <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
+                    <!--src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"-->
+                    <!--alt="Code Climate"></a>-->
+            <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
+                    <!--src="http://img.shields.io/codeclimate/coverage/github/okunishinishi/parari.svg?style=flat"-->
+                    <!--alt="Code Coverage"></a>-->
+            <!--<a href="http://gemnasium.com/okunishinishi/parari"><img-->
+                    <!--src="http://img.shields.io/gemnasium/okunishinishi/parari.svg?style=flat" alt="dependencies"></a>-->
+            <!--<a href="http://www.npmjs.org/package/parari"><img src="http://img.shields.io/npm/v/parari.svg?style=flat"-->
+                                                               <!--alt="npm version"></a>-->
+            <!--<a href="http://www.gittip.com/okunishinishi/"><img-->
+                    <!--src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>-->
 
         <p data-pr-fragment="true"
            style="background-color: #38A;"
            data-pr-velocity="0.8">
-                Ge<span style="color:#3AA;">n</span><span>erate</span>
+                Ge<span style="color:#3AA;">n</span>
         </p>
 
         <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
