--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -50,7 +50,7 @@
         <p data-pr-fragment="true"
            style="background-color: #38A;"
            data-pr-velocity="0.8">
-                Ge<span style="color:#3AA;">n</span>
+                Ge<a style="color:#3AA;" href="http://example.com" target="_blank">n</a>
         </p>
 
         <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
