--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -14,11 +14,14 @@
     <script src="../../assets/src/parari.js/05.body_scroller.js"></script>
     <script src="../../assets/src/parari.js/06.is_supported.js"></script>
     <script src="../../assets/src/parari.js/07.present_not_supported.js"></script>
+    <script src="../../assets/src/parari.js/08.resolve_layer.js"></script>
     <script src="../../assets/src/parari.js/10.drawable.js"></script>
     <script src="../../assets/src/parari.js/11.fragment.js"></script>
     <script src="../../assets/src/parari.js/12.src.js"></script>
     <script src="../../assets/src/parari.js/13.screen.js"></script>
     <script src="../../assets/src/parari.js/20.layers.js"></script>
+    <script src="../../assets/src/parari.js/21.layer.js"></script>
+    <script src="../../assets/src/parari.js/22.star_flow_layer.js"></script>
     <script src="../../assets/src/parari.js/99.start.js"></script>
 
 </head>
@@ -65,7 +68,23 @@
 
 <script>
     parari.start('parari-demo-root', {
-        hLock: true
+        hLock: true,
+        layers: {
+            sunLight: [
+                {
+                    z:-11,
+                    velocity:0.2,
+                    expansion:3,
+                    colors:["#8ED6FF","#004CB3"]
+                }
+            ],
+            starFlow: [
+                {
+                    saturation:10,
+                    z:-10
+                }
+            ]
+        }
     });
 </script>
 </body>
