--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -19,9 +19,9 @@
     <script src="../../assets/src/parari.js/11.fragment.js"></script>
     <script src="../../assets/src/parari.js/12.src.js"></script>
     <script src="../../assets/src/parari.js/13.screen.js"></script>
-    <script src="../../assets/src/parari.js/20.layers.js"></script>
-    <script src="../../assets/src/parari.js/21.layer.js"></script>
-    <script src="../../assets/src/parari.js/22.star_flow_layer.js"></script>
+    <script src="../../assets/src/parari.js/20.textures.js"></script>
+    <script src="../../assets/src/parari.js/21.texture.js"></script>
+    <script src="../../assets/src/parari.js/22.star_flow_texture.js"></script>
     <script src="../../assets/src/parari.js/99.start.js"></script>
 
 </head>
