--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -14,7 +14,7 @@
     <script src="../../assets/src/parari.js/05.body_scroller.js"></script>
     <script src="../../assets/src/parari.js/06.is_supported.js"></script>
     <script src="../../assets/src/parari.js/07.present_not_supported.js"></script>
-    <script src="../../assets/src/parari.js/08.resolve_layer.js"></script>
+    <script src="../../assets/src/parari.js/08.resolve_texture.js"></script>
     <script src="../../assets/src/parari.js/10.drawable.js"></script>
     <script src="../../assets/src/parari.js/11.fragment.js"></script>
     <script src="../../assets/src/parari.js/12.src.js"></script>
