--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -69,7 +69,7 @@
 <script>
     parari.start('parari-demo-root', {
         hLock: true,
-        layers: {
+        textures: {
             sunLight: [
                 {
                     z:-11,
