--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -78,12 +78,21 @@
                     colors:["#8ED6FF","#004CB3"]
                 }
             ],
-            starFlow: [
+            starFlow:[
                 {
-                    saturation:10,
-                    z:-10
+                    layers: [
+                        {
+                        },
+                        {
+
+                        },
+                        {
+
+                        }
+                    ]
                 }
             ]
+
         }
     });
 </script>
