--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -22,6 +22,7 @@
     <script src="../../assets/src/parari.js/20.textures.js"></script>
     <script src="../../assets/src/parari.js/21.texture.js"></script>
     <script src="../../assets/src/parari.js/22.star_flow_texture.js"></script>
+    <script src="../../assets/src/parari.js/23.rainbow_color_texture.js"></script>
     <script src="../../assets/src/parari.js/99.start.js"></script>
 
 </head>
@@ -29,72 +30,70 @@
 <div id="parari-demo-root">
 
     <section class="pr-page">
-        <!--<div class="pr-page-background"-->
-             <!--data-pr-z="-100" data-pr-fragment="true"></div>-->
-        <!--<h1 id="parari" data-pr-fragment="true"-->
-            <!--style="background-color:#38A;"-->
-            <!--data-pr-velocity="0.5">par<a>aaa</a>ari</h1>-->
+        <div class="pr-page-background"
+             data-pr-z="-100" data-pr-fragment="true"></div>
+        <h1 id="parari" data-pr-fragment="true"
+            data-pr-velocity="0.5">par<a>aaa</a>ari</h1>
 
-        <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img-->
-                <!--src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>-->
-            <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
-                    <!--src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"-->
-                    <!--alt="Code Climate"></a>-->
-            <!--<a href="http://codeclimate.com/github/okunishinishi/parari"><img-->
-                    <!--src="http://img.shields.io/codeclimate/coverage/github/okunishinishi/parari.svg?style=flat"-->
-                    <!--alt="Code Coverage"></a>-->
-            <!--<a href="http://gemnasium.com/okunishinishi/parari"><img-->
-                    <!--src="http://img.shields.io/gemnasium/okunishinishi/parari.svg?style=flat" alt="dependencies"></a>-->
-            <!--<a href="http://www.npmjs.org/package/parari"><img src="http://img.shields.io/npm/v/parari.svg?style=flat"-->
-                                                               <!--alt="npm version"></a>-->
-            <!--<a href="http://www.gittip.com/okunishinishi/"><img-->
-                    <!--src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>-->
+        <p data-pr-fragment="true" data-pr-velocity="0.8"><a href="http://travis-ci.org/okunishinishi/parari"><img
+                src="http://img.shields.io/travis/okunishinishi/parari.svg?style=flat" alt="Build Status"></a>
+            <a href="http://codeclimate.com/github/okunishinishi/parari"><img
+                    src="http://img.shields.io/codeclimate/github/okunishinishi/parari.svg?style=flat"
+                    alt="Code Climate"></a>
+            <a href="http://codeclimate.com/github/okunishinishi/parari"><img
+                    src="http://img.shields.io/codeclimate/coverage/github/okunishinishi/parari.svg?style=flat"
+                    alt="Code Coverage"></a>
+            <a href="http://gemnasium.com/okunishinishi/parari"><img
+                    src="http://img.shields.io/gemnasium/okunishinishi/parari.svg?style=flat" alt="dependencies"></a>
+            <a href="http://www.npmjs.org/package/parari"><img src="http://img.shields.io/npm/v/parari.svg?style=flat"
+                                                               alt="npm version"></a>
+            <a href="http://www.gittip.com/okunishinishi/"><img
+                    src="http://img.shields.io/gittip/okunishinishi.svg?style=flat" alt="Git tip"></a></p>
 
         <p data-pr-fragment="true"
-           style="background-color: #38A;"
            data-pr-velocity="0.8">
-                Ge<a style="color:#3AA;" href="http://example.com" target="_blank">n</a>
+            Ge<a style="color:#3AA;" href="http://example.com" target="_blank">n</a>
         </p>
 
-        <!--<p data-pr-fragment="true" data-pr-velocity="0.8"><a href="https://github.com/tick-tack/apeman"><img-->
-                <!--style="height:40px;"-->
-                <!--src="https://raw.githubusercontent.com/tick-tack/apeman/master/doc/images/apeman.png" height="40"></a> -->
-            <!--<a href="http://nodejs.org/"><img style="height:40px;" src="http://nodejs.org/images/logos/nodejs-dark.png"-->
-                                              <!--height="40"></a> </p>-->
+        <p data-pr-fragment="true" data-pr-velocity="0.8"><a href="https://github.com/tick-tack/apeman"><img
+                style="height:40px;"
+                src="https://raw.githubusercontent.com/tick-tack/apeman/master/doc/images/apeman.png" height="40"></a> 
+            <a href="http://nodejs.org/"><img style="height:40px;" src="http://nodejs.org/images/logos/nodejs-dark.png"
+                                              height="40"></a> </p>
 
 
     </section>
 
 
-<script>
-    parari.start('parari-demo-root', {
-        hLock: true,
-        textures: {
-            sunLight: [
-                {
-                    z:-11,
-                    velocity:0.2,
-                    expansion:3,
-                    colors:["#8ED6FF","#004CB3"]
-                }
-            ],
-            starFlow:[
-                {
-                    layers: [
-                        {
-                        },
-                        {
+    <script>
+        parari.start('parari-demo-root', {
+            hLock: true,
+            textures: {
+                rainbowColor: [
+                    {
+                        z: -11,
+                        velocity: 0.2
+                    }
+                ],
+                starFlow: [
+                    {
+                        backgroundColor:'transparent',
+                        z: 10,
+                        layers: [
+                            {
+                            },
+                            {
 
-                        },
-                        {
+                            },
+                            {
 
-                        }
-                    ]
-                }
-            ]
+                            }
+                        ]
+                    }
+                ]
 
-        }
-    });
-</script>
+            }
+        });
+    </script>
 </body>
 </html>
