--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -23,6 +23,7 @@
     <script src="../../assets/src/parari.js/21.texture.js"></script>
     <script src="../../assets/src/parari.js/22.star_flow_texture.js"></script>
     <script src="../../assets/src/parari.js/23.rainbow_color_texture.js"></script>
+    <script src="../../assets/src/parari.js/24.circle_light_texture.js"></script>
     <script src="../../assets/src/parari.js/99.start.js"></script>
 
 </head>
@@ -69,6 +70,9 @@
         parari.start('parari-demo-root', {
             hLock: true,
             textures: {
+                circleLight: {
+                    z: 8
+                },
                 rainbowColor: [
                     {
                         z: -11,
@@ -77,7 +81,7 @@
                 ],
                 starFlow: [
                     {
-                        backgroundColor:'transparent',
+                        backgroundColor: 'transparent',
                         z: 10,
                         layers: [
                             {
