--- a/test/design_tests/parari-test.html
+++ b/test/design_tests/parari-test.html
@@ -25,6 +25,7 @@
     <script src="../../assets/src/parari.js/23.rainbow_color_texture.js"></script>
     <script src="../../assets/src/parari.js/24.circle_light_texture.js"></script>
     <script src="../../assets/src/parari.js/25.graph_paper_texture.js"></script>
+    <script src="../../assets/src/parari.js/26.rainfall_texture.js"></script>
     <script src="../../assets/src/parari.js/99.start.js"></script>
 
 </head>
@@ -90,6 +91,9 @@
         parari.start('parari-demo-root', {
             hLock: true,
             textures: {
+                rainfall: {
+                    z: 4
+                },
                 graphPaper: {
                     z: 5,
                     grid: 30
